[package]
name = "iexc"
version = "0.1.0"
authors = ["Mikael Larsson <c.mikael.larsson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
rustls = "0.19.1"
webpki = "0.21.4"
webpki-roots = "0.21.1"
